@@ -1,3 +1,8 @@
+2023-07-05  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-repo-mode): local-variable-p has two
+	required arguments in XEmacs, bug 903273.
+
 2023-06-17  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.64 released.
